fix(anthropic): throttle + retry 429s for Claude Code requests
- Add per-process concurrency throttling for /v1/messages (opus stricter)
- Add exponential backoff w/ jitter + Retry-After support for 429/5xx
- Keep OAuth token storage/flows unchanged (only affects request sending)
- Add unit test covering 429 retry behavior
- Document tuning env vars in .env.example

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,17 @@
 
 # Synthetic AI API Key
 # SYN_API_KEY=...
+
+# --- Optional: Anthropic / Claude rate limit tuning (helps avoid 429s) ---
+# Max concurrent /v1/messages requests (default: 2)
+# CODE_PUPPY_ANTHROPIC_MAX_CONCURRENCY=2
+
+# Max concurrent requests specifically for Opus models (default: 1)
+# CODE_PUPPY_ANTHROPIC_OPUS_MAX_CONCURRENCY=1
+
+# Max retry attempts for 429/5xx from Anthropic (default: 6)
+# CODE_PUPPY_ANTHROPIC_MAX_RETRIES=6
+
+# Backoff base seconds (default: 1) and max wait cap (default: 60)
+# CODE_PUPPY_ANTHROPIC_BASE_RETRY_WAIT_SECONDS=1
+# CODE_PUPPY_ANTHROPIC_MAX_RETRY_WAIT_SECONDS=60
