--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ dependencies = [
     "websockets>=12.0",
     "termflow-md>=0.1.8",
     "Pillow>=10.0.0",
+    "logfire>=3.22.0",
+    "genai-prices>=0.2.0",
 ]
 dev-dependencies = [
     "pytest>=8.3.4",
