--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "requests>=2.28.0",
     "rich>=13.4.2",
     "pydantic>=2.4.0",
+    "pydantic-settings>=2.7.0",
     "python-dotenv>=1.0.0",
     "prompt-toolkit>=3.0.52",
     "rapidfuzz>=3.13.0",
